include/ween32.h

/* ---- fundamental types (LLP64-faithful) ------------------------------- */

typedef int BOOL;
typedef unsigned char BYTE;
typedef uint16_t WORD;
typedef int16_t SHORT;
typedef uint32_t DWORD;
typedef int32_t LONG;
typedef uint32_t UINT;
typedef intptr_t LONG_PTR;
typedef uintptr_t UINT_PTR;
typedef UINT_PTR WPARAM;
typedef LONG_PTR LPARAM;
typedef LONG_PTR LRESULT;
typedef intptr_t INT_PTR;
typedef char CHAR;
typedef const CHAR *LPCSTR;
typedef CHAR *LPSTR;
typedef void *LPVOID;
typedef WORD ATOM;
typedef DWORD COLORREF; /* 0x00BBGGRR, as on Windows */
#define TRUE 1
#define FALSE 0
/* Handles are opaque pointers, as on Windows. */
typedef struct ween_wnd *HWND;
typedef struct ween_dc *HDC;
typedef struct ween_gdiobj *HGDIOBJ;
typedef struct ween_gdiobj *HBRUSH;
typedef struct ween_gdiobj *HFONT;
typedef void *HINSTANCE;
typedef void *HICON;
struct ween_imagelist;
typedef struct ween_imagelist *HIMAGELIST;
typedef struct ween_gdiobj *HBITMAP;
typedef void *HCURSOR;
/* A real menu, or a control id squeezed into the same parameter — win32 uses
 * one slot for both, and CreateWindowEx says which by whether the window is a
 * child. */
struct ween_menu;
typedef struct ween_menu *HMENU;
typedef struct tagPOINT {
    LONG x;
    LONG y;
} POINT;
typedef struct tagRECT {
    LONG left;
    LONG top;
    LONG right;
    LONG bottom;
} RECT;
typedef RECT *LPRECT;
typedef struct tagSIZE {
    LONG cx;
    LONG cy;
} SIZE;
typedef struct tagMSG {
    HWND hwnd;
    UINT message;
    WPARAM wParam;
    LPARAM lParam;
    DWORD time;
    POINT pt;
} MSG;
typedef MSG *LPMSG;
typedef LRESULT(CALLBACK *WNDPROC)(HWND, UINT, WPARAM, LPARAM);
typedef INT_PTR(CALLBACK *DLGPROC)(HWND, UINT, WPARAM, LPARAM);
typedef struct {
    DWORD style;
    DWORD dwExtendedStyle;
    WORD cdit;
    short x, y, cx, cy;
} DLGTEMPLATE, *LPDLGTEMPLATE;
typedef struct {
    DWORD style;
    DWORD dwExtendedStyle;
    short x, y, cx, cy;
    WORD id;
} DLGITEMTEMPLATE, *LPDLGITEMTEMPLATE;
typedef struct tagWNDCLASSA {
    UINT style;
    WNDPROC lpfnWndProc;
    int cbClsExtra;
    int cbWndExtra;
    HINSTANCE hInstance;
    HICON hIcon;
    HCURSOR hCursor;
    HBRUSH hbrBackground;
    LPCSTR lpszMenuName;
    LPCSTR lpszClassName;
} WNDCLASSA;
typedef struct tagPAINTSTRUCT {
    HDC hdc;
    BOOL fErase;
    RECT rcPaint;
    BOOL fRestore;
    BOOL fIncUpdate;
    BYTE rgbReserved[32];
} PAINTSTRUCT;
typedef struct tagDRAWITEMSTRUCT {
    UINT CtlType;
    UINT CtlID;
    UINT itemID;
    UINT itemAction;
    UINT itemState;
    HWND hwndItem;
    HDC hDC;
    RECT rcItem;
    UINT_PTR itemData;
} DRAWITEMSTRUCT, *LPDRAWITEMSTRUCT;
/* What a common control sends its parent through WM_NOTIFY. */
typedef struct tagNMHDR {
    HWND hwndFrom;
    UINT_PTR idFrom;
    UINT code;
} NMHDR;
typedef struct tagCREATESTRUCTA {
    LPVOID lpCreateParams;
    HINSTANCE hInstance;
    HMENU hMenu;
    HWND hwndParent;
    int cy;
    int cx;
    int y;
    int x;
    LONG style;
    LPCSTR lpszName;
    LPCSTR lpszClass;
    DWORD dwExStyle;
} CREATESTRUCTA;
/* ---- macros ------------------------------------------------------------ */

#define LOWORD(l) ((WORD)(((UINT_PTR)(l)) & 0xffff))
#define HIWORD(l) ((WORD)((((UINT_PTR)(l)) >> 16) & 0xffff))
#define MAKELPARAM(a, b) ((LPARAM)(DWORD)(((WORD)(a)) | ((DWORD)((WORD)(b))) << 16))
#define MAKEWPARAM(a, b) ((WPARAM)(DWORD)(((WORD)(a)) | ((DWORD)((WORD)(b))) << 16))
#define GET_X_LPARAM(lp) ((int)(short)LOWORD(lp))
#define GET_Y_LPARAM(lp) ((int)(short)HIWORD(lp))
#define RGB(r, g, b) ((COLORREF)(((BYTE)(r)) | ((WORD)((BYTE)(g)) << 8) | (((DWORD)(BYTE)(b)) << 16)))
#define GetRValue(c) ((BYTE)(c))
#define GetGValue(c) ((BYTE)((c) >> 8))
#define GetBValue(c) ((BYTE)((c) >> 16))
#define CW_USEDEFAULT ((int)0x80000000)
typedef struct {
    DWORD cbSize;
    DWORD dwFlags;
    HWND hwndTrack;
    DWORD dwHoverTime;
} TRACKMOUSEEVENT, *LPTRACKMOUSEEVENT;
BOOL TrackMouseEvent(TRACKMOUSEEVENT *track);
/* Whether Shift, Control or Alt is down now, as win32 reports it: the high
 * bit set means held. Asked mid-gesture, when there is no message to read
 * it from -- constraining a drag to a square while it is being dragged. */
SHORT GetKeyState(int vk);
/* ---- cursors -------------------------------------------------------------
 *
 * The standard shapes, named as win32 names them. A window class carries one
 * and it is set whenever the pointer is over that window; SetCursor overrides
 * it until the pointer moves somewhere else, which is how a control shows a
 * different shape over part of itself. There are no custom cursors: these are
 * the window system's own, which is what the classic shell used. */
#define IDC_ARROW ((LPCSTR)32512)
#define IDC_IBEAM ((LPCSTR)32513)
#define IDC_WAIT ((LPCSTR)32514)
#define IDC_CROSS ((LPCSTR)32515)
#define IDC_SIZENWSE ((LPCSTR)32642)
#define IDC_SIZENESW ((LPCSTR)32643)
#define IDC_SIZEWE ((LPCSTR)32644)
#define IDC_SIZENS ((LPCSTR)32645)
#define IDC_SIZEALL ((LPCSTR)32646)
#define IDC_HAND ((LPCSTR)32649)
HCURSOR LoadCursorA(HINSTANCE inst, LPCSTR name);
/* A cursor of the application's own, out of the two masks win32 has always
 * taken: one bit per pixel, rows padded to a byte, AND first. A clear AND
 * bit is a pixel that is drawn, and the XOR bit is then black or white. */
HCURSOR CreateCursor(HINSTANCE inst, int xhot, int yhot, int width,
                     int height, const void *and_plane, const void *xor_plane);
BOOL DestroyCursor(HCURSOR cursor);
HCURSOR SetCursor(HCURSOR cursor);
/* A scroll bar's whole state. The thumb's size comes from nPage against the
 * range, which is why a bar cannot be driven by position alone. */
typedef struct tagSCROLLINFO {
    UINT cbSize;
    UINT fMask;
    int nMin;
    int nMax;
    UINT nPage;
    int nPos;
    int nTrackPos;
} SCROLLINFO, *LPSCROLLINFO;
typedef struct ween_gdiobj *HPEN;
typedef struct tagBITMAP {
    LONG bmType;
    LONG bmWidth;
    LONG bmHeight;
    LONG bmWidthBytes;
    WORD bmPlanes;
    WORD bmBitsPixel;
    LPVOID bmBits;
} BITMAP, *PBITMAP;
typedef struct tagRGBQUAD {
    BYTE rgbBlue;
    BYTE rgbGreen;
    BYTE rgbRed;
    BYTE rgbReserved;
} RGBQUAD;
typedef struct tagBITMAPINFOHEADER {
    DWORD biSize;
    LONG biWidth;
    LONG biHeight;
    WORD biPlanes;
    WORD biBitCount;
    DWORD biCompression;
    DWORD biSizeImage;
    LONG biXPelsPerMeter;
    LONG biYPelsPerMeter;
    DWORD biClrUsed;
    DWORD biClrImportant;
} BITMAPINFOHEADER, *LPBITMAPINFOHEADER;
typedef struct tagBITMAPINFO {
    BITMAPINFOHEADER bmiHeader;
    RGBQUAD bmiColors[1];
} BITMAPINFO, *LPBITMAPINFO;
/* Registering the common control classes. ween32 has them registered before
 * anything can ask for one, so this says yes and does nothing — but an
 * application must still call it, because on Windows it is what puts the
 * classes there. */
typedef struct {
    DWORD dwSize;
    DWORD dwICC;
} INITCOMMONCONTROLSEX, *LPINITCOMMONCONTROLSEX;
/* ---- USER32 -------------------------------------------------------------- */

ATOM RegisterClassA(const WNDCLASSA *wc);
HWND CreateWindowExA(DWORD ex_style, LPCSTR class_name, LPCSTR window_name,
                     DWORD style, int x, int y, int w, int h,
                     HWND parent, HMENU menu, HINSTANCE inst, LPVOID param);
#define CreateWindowA(cls, name, style, x, y, w, h, parent, menu, inst, param) \
    CreateWindowExA(0L, cls, name, style, x, y, w, h, parent, menu, inst, param)
BOOL DestroyWindow(HWND wnd);
BOOL ShowWindow(HWND wnd, int cmd);
BOOL SetWindowTextA(HWND wnd, LPCSTR text);
int GetWindowTextA(HWND wnd, LPSTR out, int max);
BOOL GetClientRect(HWND wnd, LPRECT rect);
BOOL AdjustWindowRect(LPRECT rect, DWORD style, BOOL menu);
BOOL AdjustWindowRectEx(LPRECT rect, DWORD style, BOOL menu, DWORD ex_style);
UINT GetDpiForSystem(void);
BOOL MoveWindow(HWND wnd, int x, int y, int w, int h, BOOL repaint);
BOOL InvalidateRect(HWND wnd, const RECT *rect, BOOL erase);
BOOL UpdateWindow(HWND wnd);
HWND GetDlgItem(HWND dlg, int id);
/* A control's text by its id, which is how a dialog reads what was typed. */
UINT GetDlgItemTextA(HWND dlg, int id, LPSTR out, int max);
BOOL SetDlgItemTextA(HWND dlg, int id, LPCSTR text);
int GetDlgCtrlID(HWND wnd);
HWND SetFocus(HWND wnd);
HWND GetFocus(void);
LONG GetWindowLongA(HWND wnd, int index);
LONG SetWindowLongA(HWND wnd, int index, LONG value);
BOOL EnableWindow(HWND wnd, BOOL enable);
BOOL IsWindowEnabled(HWND wnd);
BOOL CheckDlgButton(HWND dlg, int id, UINT check);
UINT IsDlgButtonChecked(HWND dlg, int id);
BOOL CheckRadioButton(HWND dlg, int first, int last, int check);
HWND SetCapture(HWND wnd);
BOOL ReleaseCapture(void);
HWND GetCapture(void);
BOOL GetMessageA(LPMSG msg, HWND wnd, UINT min, UINT max);
/* Timers. SetTimer with an id that is already running resets it; with a NULL
 * window it allocates an id and returns it. lpTimerFunc, when given, is called
 * by DispatchMessage instead of the window procedure. */
typedef void(CALLBACK *TIMERPROC)(HWND, UINT, UINT_PTR, DWORD);
UINT_PTR SetTimer(HWND wnd, UINT_PTR id, UINT elapse_ms, TIMERPROC fn);
BOOL KillTimer(HWND wnd, UINT_PTR id);
/* The whole command line as one string, program name first, the way win32
 * hands it over -- so an application takes its arguments the same way here
 * and there. */
LPSTR GetCommandLineA(void);
int GetSystemMetrics(int index);
/* How much memory the machine has, which is the one thing an About box says
 * that is about the machine rather than the program. */
typedef struct {
    DWORD dwLength;
    DWORD dwMemoryLoad;
    DWORD dwTotalPhys;
    DWORD dwAvailPhys;
    DWORD dwTotalPageFile;
    DWORD dwAvailPageFile;
    DWORD dwTotalVirtual;
    DWORD dwAvailVirtual;
} MEMORYSTATUS, *LPMEMORYSTATUS;
void GlobalMemoryStatus(LPMEMORYSTATUS status);
BOOL GetWindowRect(HWND wnd, LPRECT rect);
HWND GetParent(HWND wnd);
BOOL ClientToScreen(HWND wnd, POINT *pt);
BOOL ScreenToClient(HWND wnd, POINT *pt);
/* ---- the clipboard -------------------------------------------------------
 *
 * Open it, empty it, put something in, close it. The data belongs to the
 * clipboard once handed over — do not free it — and what GetClipboardData
 * returns stays valid until the next thing replaces it.
 *
 * WM_CUT/WM_COPY/WM_PASTE are what a control acts on; an EDIT also takes
 * Ctrl+X, Ctrl+C, Ctrl+V and Ctrl+A directly. */
typedef void *HANDLE;
HANDLE LoadImageA(HINSTANCE inst, LPCSTR name, UINT type, int cx, int cy,
                  UINT flags);
typedef struct {
    BYTE fVirt;
    WORD key;
    WORD cmd;
} ACCEL, *LPACCEL;
struct ween_accel;
typedef struct ween_accel *HACCEL;
BOOL PostMessageA(HWND wnd, UINT msg, WPARAM wp, LPARAM lp);
BOOL TranslateMessage(const MSG *msg);
LRESULT DispatchMessageA(const MSG *msg);
void PostQuitMessage(int code);
LRESULT SendMessageA(HWND wnd, UINT msg, WPARAM wp, LPARAM lp);
LRESULT DefWindowProcA(HWND wnd, UINT msg, WPARAM wp, LPARAM lp);
int MessageBoxA(HWND owner, LPCSTR text, LPCSTR caption, UINT type);