zig/ween32.zig

//! Zig bindings for the win32-compatible API.
//!
//! On non-Windows targets these symbols resolve to libween32 (link the
//! `ween32` artifact); on Windows they are the real USER32/GDI32/COMCTL32 —
//! same names, signatures and constants, so application code is identical on
//! both. This mirrors include/ween32.h; keep the two in sync.
//!
//! The constants at the end are *generated* from that header by
//! `tools/zigbind/genconsts.py --merge`, because a constant copied wrong is a
//! bug that compiles, links and runs — and `make win32` already checks the C
//! header's values against the real Windows SDK, so the Zig side inherits
//! that check instead of needing a second one. Everything above them is
//! written by hand.

const std = @import("std");

// ---- fundamental types (LLP64-faithful) ---------------------------------

pub const BOOL = c_int;
pub const BYTE = u8;
pub const WORD = u16;
pub const SHORT = i16;
pub const DWORD = u32;
pub const LONG = i32;
pub const UINT = c_uint;
pub const WPARAM = usize;
pub const LPARAM = isize;
pub const LRESULT = isize;
pub const INT_PTR = isize;
pub const UINT_PTR = usize;
pub const ATOM = u16;
pub const COLORREF = u32; // 0x00BBGGRR
pub const LPCSTR = [*:0]const u8;
pub const LPSTR = [*:0]u8;

pub const TRUE: BOOL = 1;
pub const FALSE: BOOL = 0;

pub const HWND = *opaque {};
pub const HDC = *opaque {};
pub const HGDIOBJ = *opaque {};
pub const HBRUSH = HGDIOBJ;
pub const HFONT = HGDIOBJ;
pub const HPEN = HGDIOBJ;
pub const HBITMAP = HGDIOBJ;
pub const HINSTANCE = ?*anyopaque;
pub const HICON = ?*anyopaque;
pub const HCURSOR = ?*anyopaque;
pub const HMENU = ?*anyopaque;
pub const HANDLE = ?*anyopaque;
pub const HACCEL = ?*anyopaque;
pub const HIMAGELIST = ?*anyopaque;

pub const POINT = extern struct { x: LONG, y: LONG };
pub const RECT = extern struct { left: LONG, top: LONG, right: LONG, bottom: LONG };
pub const SIZE = extern struct { cx: LONG, cy: LONG };

pub const MSG = extern struct {
    hwnd: ?HWND,
    message: UINT,
    wParam: WPARAM,
    lParam: LPARAM,
    time: DWORD,
    pt: POINT,
};

pub const WNDPROC = *const fn (HWND, UINT, WPARAM, LPARAM) callconv(.c) LRESULT;
pub const DLGPROC = *const fn (HWND, UINT, WPARAM, LPARAM) callconv(.c) INT_PTR;
pub const TIMERPROC = *const fn (HWND, UINT, UINT_PTR, DWORD) callconv(.c) void;

pub const WNDCLASSA = extern struct {
    style: UINT = 0,
    lpfnWndProc: WNDPROC,
    cbClsExtra: c_int = 0,
    cbWndExtra: c_int = 0,
    hInstance: HINSTANCE = null,
    hIcon: HICON = null,
    hCursor: HCURSOR = null,
    hbrBackground: ?HBRUSH = null,
    lpszMenuName: ?LPCSTR = null,
    lpszClassName: LPCSTR,
};

pub const PAINTSTRUCT = extern struct {
    hdc: HDC,
    fErase: BOOL,
    rcPaint: RECT,
    fRestore: BOOL,
    fIncUpdate: BOOL,
    rgbReserved: [32]BYTE,
};

pub const CREATESTRUCTA = extern struct {
    lpCreateParams: ?*anyopaque,
    hInstance: HINSTANCE,
    hMenu: HMENU,
    hwndParent: ?HWND,
    cy: c_int,
    cx: c_int,
    y: c_int,
    x: c_int,
    style: LONG,
    lpszName: ?LPCSTR,
    lpszClass: ?LPCSTR,
    dwExStyle: DWORD,
};

pub const DRAWITEMSTRUCT = extern struct {
    CtlType: UINT,
    CtlID: UINT,
    itemID: UINT,
    itemAction: UINT,
    itemState: UINT,
    hwndItem: HWND,
    hDC: HDC,
    rcItem: RECT,
    itemData: UINT_PTR,
};

pub const NMHDR = extern struct {
    hwndFrom: HWND,
    idFrom: UINT_PTR,
    code: UINT,
};

pub const TRACKMOUSEEVENT = extern struct {
    cbSize: DWORD,
    dwFlags: DWORD,
    hwndTrack: ?HWND,
    dwHoverTime: DWORD,
};

pub const INITCOMMONCONTROLSEX = extern struct {
    dwSize: DWORD,
    dwICC: DWORD,
};

pub const ACCEL = extern struct {
    fVirt: BYTE,
    key: WORD,
    cmd: WORD,
};

pub const SCROLLINFO = extern struct {
    cbSize: UINT = @sizeOf(SCROLLINFO),
    fMask: UINT = 0,
    nMin: c_int = 0,
    nMax: c_int = 0,
    nPage: UINT = 0,
    nPos: c_int = 0,
    nTrackPos: c_int = 0,
};

pub const BITMAP = extern struct {
    bmType: LONG = 0,
    bmWidth: LONG = 0,
    bmHeight: LONG = 0,
    bmWidthBytes: LONG = 0,
    bmPlanes: WORD = 0,
    bmBitsPixel: WORD = 0,
    bmBits: ?*anyopaque = null,
};

pub const RGBQUAD = extern struct {
    rgbBlue: BYTE = 0,
    rgbGreen: BYTE = 0,
    rgbRed: BYTE = 0,
    rgbReserved: BYTE = 0,
};

pub const BITMAPINFOHEADER = extern struct {
    biSize: DWORD = @sizeOf(BITMAPINFOHEADER),
    biWidth: LONG = 0,
    biHeight: LONG = 0,
    biPlanes: WORD = 1,
    biBitCount: WORD = 24,
    biCompression: DWORD = 0,
    biSizeImage: DWORD = 0,
    biXPelsPerMeter: LONG = 0,
    biYPelsPerMeter: LONG = 0,
    biClrUsed: DWORD = 0,
    biClrImportant: DWORD = 0,
};

pub const BITMAPINFO = extern struct {
    bmiHeader: BITMAPINFOHEADER = .{},
    bmiColors: [1]RGBQUAD = .{.{}},
};

pub const BITMAPFILEHEADER = extern struct {
    bfType: WORD align(1) = 0x4D42, // "BM"
    bfSize: DWORD align(1) = 0,
    bfReserved1: WORD align(1) = 0,
    bfReserved2: WORD align(1) = 0,
    bfOffBits: DWORD align(1) = 0,
};

// A dialog template, as CreateDialogIndirectParam takes one: the header, then
// each control, every one of them padded to a 4-byte boundary. The strings
// are UTF-16 in a real template; ween32 and win32 both read them that way.
pub const DLGTEMPLATE = extern struct {
    style: DWORD align(4),
    dwExtendedStyle: DWORD,
    cdit: WORD,
    x: i16,
    y: i16,
    cx: i16,
    cy: i16,
};

pub const DLGITEMTEMPLATE = extern struct {
    style: DWORD align(4),
    dwExtendedStyle: DWORD,
    x: i16,
    y: i16,
    cx: i16,
    cy: i16,
    id: WORD,
};

// ---- macros --------------------------------------------------------------

inline fn asUsize(v: anytype) usize {
    return switch (@typeInfo(@TypeOf(v))) {
        .int => |i| if (i.signedness == .signed)
            @bitCast(@as(isize, v))
        else
            @as(usize, v),
        else => v, // comptime_int
    };
}

pub inline fn LOWORD(l: anytype) WORD {
    return @truncate(asUsize(l));
}
pub inline fn HIWORD(l: anytype) WORD {
    return @truncate(asUsize(l) >> 16);
}
pub inline fn MAKELPARAM(a: WORD, b: WORD) LPARAM {
    return @bitCast(@as(usize, a) | (@as(usize, b) << 16));
}
pub inline fn MAKEWPARAM(a: WORD, b: WORD) WPARAM {
    return @as(usize, a) | (@as(usize, b) << 16);
}
pub inline fn GET_X_LPARAM(lp: LPARAM) i32 {
    return @as(i16, @bitCast(LOWORD(lp)));
}
pub inline fn GET_Y_LPARAM(lp: LPARAM) i32 {
    return @as(i16, @bitCast(HIWORD(lp)));
}
pub inline fn RGB(r: u8, g: u8, b: u8) COLORREF {
    return @as(u32, r) | (@as(u32, g) << 8) | (@as(u32, b) << 16);
}
pub inline fn GetRValue(c: COLORREF) u8 {
    return @truncate(c);
}
pub inline fn GetGValue(c: COLORREF) u8 {
    return @truncate(c >> 8);
}
pub inline fn GetBValue(c: COLORREF) u8 {
    return @truncate(c >> 16);
}
pub inline fn MAKEINTRESOURCE(i: u16) LPCSTR {
    return @ptrFromInt(@as(usize, i));
}

pub const CW_USEDEFAULT: c_int = @bitCast(@as(u32, 0x80000000));

// The stock cursors, which are numbers pretending to be strings: the C
// header spells them as casts, so they are written out here rather than
// generated with the rest.
pub const IDC_ARROW = MAKEINTRESOURCE(32512);
pub const IDC_IBEAM = MAKEINTRESOURCE(32513);
pub const IDC_WAIT = MAKEINTRESOURCE(32514);
pub const IDC_CROSS = MAKEINTRESOURCE(32515);
pub const IDC_SIZENWSE = MAKEINTRESOURCE(32642);
pub const IDC_SIZENESW = MAKEINTRESOURCE(32643);
pub const IDC_SIZEWE = MAKEINTRESOURCE(32644);
pub const IDC_SIZENS = MAKEINTRESOURCE(32645);
pub const IDC_SIZEALL = MAKEINTRESOURCE(32646);
pub const IDC_HAND = MAKEINTRESOURCE(32649);

// ---- USER32: windows and messages ---------------------------------------

pub extern fn RegisterClassA(wc: *const WNDCLASSA) ATOM;
pub extern fn CreateWindowExA(ex_style: DWORD, class_name: LPCSTR, window_name: ?LPCSTR, style: DWORD, x: c_int, y: c_int, w: c_int, h: c_int, parent: ?HWND, menu: HMENU, inst: HINSTANCE, param: ?*anyopaque) ?HWND;
pub fn CreateWindowA(class_name: LPCSTR, window_name: ?LPCSTR, style: DWORD, x: c_int, y: c_int, w: c_int, h: c_int, parent: ?HWND, menu: HMENU, inst: HINSTANCE, param: ?*anyopaque) ?HWND {
    return CreateWindowExA(0, class_name, window_name, style, x, y, w, h, parent, menu, inst, param);
}
pub extern fn DestroyWindow(wnd: HWND) BOOL;
pub extern fn ShowWindow(wnd: HWND, cmd: c_int) BOOL;
pub extern fn SetWindowTextA(wnd: HWND, text: LPCSTR) BOOL;
pub extern fn GetWindowTextA(wnd: HWND, out: LPSTR, max: c_int) c_int;
pub extern fn GetClientRect(wnd: HWND, rect: *RECT) BOOL;
pub extern fn GetWindowRect(wnd: HWND, rect: *RECT) BOOL;
pub extern fn AdjustWindowRect(rect: *RECT, style: DWORD, menu: BOOL) BOOL;
pub extern fn AdjustWindowRectEx(rect: *RECT, style: DWORD, menu: BOOL, ex_style: DWORD) BOOL;
pub extern fn GetDpiForSystem() UINT;
pub extern fn MoveWindow(wnd: HWND, x: c_int, y: c_int, w: c_int, h: c_int, repaint: BOOL) BOOL;
pub extern fn InvalidateRect(wnd: HWND, rect: ?*const RECT, erase: BOOL) BOOL;
pub extern fn UpdateWindow(wnd: HWND) BOOL;
pub extern fn GetDlgItem(dlg: HWND, id: c_int) ?HWND;
pub extern fn GetDlgCtrlID(wnd: HWND) c_int;
pub extern fn GetDlgItemTextA(dlg: HWND, id: c_int, out: LPSTR, max: c_int) UINT;
pub extern fn SetDlgItemTextA(dlg: HWND, id: c_int, text: LPCSTR) BOOL;
pub extern fn SetFocus(wnd: ?HWND) ?HWND;
pub extern fn GetFocus() ?HWND;
pub extern fn SetCapture(wnd: HWND) ?HWND;
pub extern fn ReleaseCapture() BOOL;
pub extern fn GetCapture() ?HWND;
pub extern fn GetParent(wnd: HWND) ?HWND;
pub extern fn EnableWindow(wnd: HWND, enable: BOOL) BOOL;
pub extern fn IsWindowEnabled(wnd: HWND) BOOL;
pub extern fn CheckDlgButton(dlg: HWND, id: c_int, check: UINT) BOOL;
pub extern fn IsDlgButtonChecked(dlg: HWND, id: c_int) UINT;
pub extern fn CheckRadioButton(dlg: HWND, first: c_int, last: c_int, check: c_int) BOOL;
pub extern fn GetSystemMetrics(index: c_int) c_int;
pub extern fn GetCommandLineA() LPSTR;

pub const MEMORYSTATUS = extern struct {
    dwLength: DWORD = @sizeOf(MEMORYSTATUS),
    dwMemoryLoad: DWORD = 0,
    dwTotalPhys: DWORD = 0,
    dwAvailPhys: DWORD = 0,
    dwTotalPageFile: DWORD = 0,
    dwAvailPageFile: DWORD = 0,
    dwTotalVirtual: DWORD = 0,
    dwAvailVirtual: DWORD = 0,
};
pub extern fn GlobalMemoryStatus(status: *MEMORYSTATUS) void;
pub extern fn ClientToScreen(wnd: HWND, pt: *POINT) BOOL;
pub extern fn ScreenToClient(wnd: HWND, pt: *POINT) BOOL;
pub extern fn GetWindowLongA(wnd: HWND, index: c_int) LONG;
pub extern fn SetWindowLongA(wnd: HWND, index: c_int, value: LONG) LONG;
pub extern fn TrackMouseEvent(track: *TRACKMOUSEEVENT) BOOL;
pub extern fn GetKeyState(vk: c_int) SHORT;
pub extern fn SetTimer(wnd: HWND, id: UINT_PTR, ms: UINT, proc: ?TIMERPROC) UINT_PTR;
pub extern fn KillTimer(wnd: HWND, id: UINT_PTR) BOOL;
pub extern fn LoadCursorA(inst: HINSTANCE, name: LPCSTR) HCURSOR;
pub extern fn SetCursor(cursor: HCURSOR) HCURSOR;
pub extern fn CreateCursor(inst: HINSTANCE, xhot: c_int, yhot: c_int, width: c_int, height: c_int, and_plane: *const anyopaque, xor_plane: *const anyopaque) HCURSOR;
pub extern fn DestroyCursor(cursor: HCURSOR) BOOL;
pub extern fn LoadImageA(inst: HINSTANCE, name: LPCSTR, kind: UINT, cx: c_int, cy: c_int, flags: UINT) HANDLE;
pub extern fn MessageBoxA(owner: ?HWND, text: LPCSTR, caption: LPCSTR, kind: UINT) c_int;

pub extern fn GetMessageA(msg: *MSG, wnd: ?HWND, min: UINT, max: UINT) BOOL;
pub extern fn TranslateMessage(msg: *const MSG) BOOL;
pub extern fn DispatchMessageA(msg: *const MSG) LRESULT;
pub extern fn PostQuitMessage(code: c_int) void;
pub extern fn SendMessageA(wnd: HWND, msg: UINT, wp: WPARAM, lp: LPARAM) LRESULT;
pub extern fn PostMessageA(wnd: HWND, msg: UINT, wp: WPARAM, lp: LPARAM) BOOL;
pub extern fn DefWindowProcA(wnd: HWND, msg: UINT, wp: WPARAM, lp: LPARAM) LRESULT;

// ---- USER32: menus -------------------------------------------------------
